syntax/tests/parsing/errors/expressions/setField.res
if (match) {
  let a = 1
	// notice missing expression after = 
  m.left.compatibleTypeArgs =
} else {
  sideEffect()
}
